# CareerConductor

./: .env.example  .gitignore  README.md  install.bat  install.command  install.sh  pyproject.toml  start.bat  start.command  start.sh
.claude/: launch.json
careerconductor/: main.py
careerconductor/agents/: analysis.py  artifact_generator.py  llm.py  orchestrator.py  prefilter_node.py  referral_notes.py  scraping_node.py  selection.py  state.py
careerconductor/config/: board_detect.py  master_resume.md  project_database.json  settings.py  store.py  thresholds.json
careerconductor/db/: repository.py  schema.sql
careerconductor/scrapers/: __init__.py  base.py  greenhouse.py  lever.py
careerconductor/templates/: cv_webpage.py  resume_templates.py
careerconductor/tests/: test_core.py
careerconductor/ui/: app.py  common.py  theme.py
careerconductor/ui/pages/: 1_Upload.py  1_📤_Upload.py  2_Configuration.py  2_⚙️_Configuration.py  3_Run_Pipeline.py  3_▶️_Run_Pipeline.py  4_Report.py  4_📊_Report.py  5_Templates.py  5_🎨_Templates.py
scripts/: install.sh  run_pipeline.sh  run_ui.sh
