[project]
name = "careerconductor"
version = "0.1.0"
description = "Multi-agent job scouting and tailoring engine (Utah market, local-first)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["careerconductor*"]
